fixed server call when map change size bug, not able to click top LHS mobile map bug, country name appearing twice and text overflow on smallPopOut

--- a/src/hotelApp/css/popoutBoxSm.css
+++ b/src/hotelApp/css/popoutBoxSm.css
@@ -82,9 +82,6 @@ width: 100%;
   color: #222222;
   font-weight: 300;
   line-height: 20px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .popout-box-sm-pp1 {
